# algorithm_ws

./: .gitignore  README.md  coding_style_instruction.md
.catkin_tools/profiles/default/: devel_collisions.txt
.github/: pull_request_template.md
Python3/: Dummy.py
README_dir/: Gauss-Newton_Method.md  KalmanFilter_Method.md  Newton_Rapshon_Method.md
ROS2_build/log/: latest_build
ROS2_build/src/optimizer/local_bundle_adjustment/: CMakeLists.txt  package.xml
ROS2_build/src/optimizer/local_bundle_adjustment/src/: local_bundle_adjustment.cpp
ROS2_build/src/topic/dummy_publisher_component/: CMakeLists.txt  package.xml
ROS2_build/src/topic/dummy_publisher_component/include/dummy_publisher/: dummy_publisher_component.hpp
ROS2_build/src/topic/dummy_publisher_component/launch/: dummy_publisher.launch.py
ROS2_build/src/topic/dummy_publisher_component/src/: README.md  dummy_publisher_component.cpp
ROS2_build/src/topic/dummy_publisher_node/: CMakeLists.txt  package.xml
ROS2_build/src/topic/dummy_publisher_node/include/dummy_publisher_node/: dummy_publisher.hpp
ROS2_build/src/topic/dummy_publisher_node/src/: dummy_publisher_node.cpp
ROS2_build/src/topic/dummy_subscriber_component/: CMakeLists.txt  package.xml
ROS2_build/src/topic/dummy_subscriber_component/include/dummy_subscriber_component/: dummy_subscriber_component.hpp
ROS2_build/src/topic/dummy_subscriber_component/launch/: dummy_subscriber.launch.py
ROS2_build/src/topic/dummy_subscriber_component/src/: dummy_subscriber_component.cpp
ROS_build/: tf_error.txt
ROS_build/data/: .associate.txt.swp  .groundtruth.txt.swp
ROS_build/src/: CMakeLists.txt
ROS_build/src/Opencv/: CMakeLists.txt  package.xml
ROS_build/src/Opencv/include/Opencv/: Opencv.hpp  Opencv_tuto.hpp  read_path.hpp
ROS_build/src/Opencv/src/Vision/: Eigen_Geometry.cpp  Epipolar_geometry.cpp  Optical_flow.cpp  Pose_estimation3D2D.cpp  RGB-D-map.cpp  feature_extract_matching.cpp  plotTrajectory.cpp  pose_estimation_2d2d.cpp  stereo_vision.cpp  triangulation.cpp  undistortimage.cpp
ROS_build/src/Opencv/src/Vision/Calibration/: calibrate.cpp  undistort.cpp
ROS_build/src/Opencv/src/Vision/Calibration/chessboard/: left_intrinsics.yml
ROS_build/src/Opencv/src/Vision/RGB-D/: Sparse_direct_method.cpp  new_Sparse_DM.cpp
ROS_build/src/Opencv/src/Vision/Stereo/: Eight_point.cpp  Get_disparity.cpp  Get_epipolar.cpp  Get_fundamental.cpp  Stiching_image.cpp
ROS_build/src/Opencv/src/opencv_alg/: Gaussian.cpp  LSM.cpp  Linear-LSM.cpp  NonLinear-LSM.cpp  PerspectiveTopview.cpp  QRcode.cpp  RANSAC.cpp  harris_corner.cpp  histogram.cpp  k-means.cpp  morphology.cpp  otsu.cpp  test.cpp
ROS_build/src/Opencv/src/opencv_tuto/: Binarization.cpp  MatToMat.cpp
ROS_build/src/Practice/C_function/: CMakeLists.txt
ROS_build/src/Practice/C_function/include/C_function/: templete.hpp  templete.tpp
ROS_build/src/Practice/C_function/src/: break_event.cpp  cote.cpp  enum.cpp  for_loop.cpp  main.cpp  map.cpp  multi_thread.cpp  multi_virtual_function.cpp  static.cpp  templete.cpp  templete_parameter_pack.cpp  templete_specialization.cpp  threadpool.cpp  threadpool_templete_specialization.cpp  using.cpp
ROS_build/src/Practice/C_function/src/Modern_Cplusplus/: accumulate.cpp  insert.cpp  of.cpp  transform.cpp
ROS_build/src/Practice/C_function/test/: rse.c
ROS_build/src/ROS/C++/rospub/: CMakeLists.txt
ROS_build/src/ROS/C++/rospub/src/: main.cpp
cmake_build/: Abseil.md  CMakeLists.txt  README.md
cmake_build/include/: system.hpp
cmake_build/include/cmake_build/: main.hpp  system.hpp
cmake_build/src/: array.cpp  auto.cpp  binary_search.cpp  bind.cpp  class_new.cpp  forward.cpp  function.cpp  ifstream.cpp  inline  inline.cpp  lambda.cpp  list.cpp  main.cpp  move.cpp  shared_ptr.cpp  shrink_to_fit.cpp  test.cpp  union.cpp  unique_ptr.cpp  unordered_map.cpp  using_function_pointer.cpp  virtual_class  virtual_class.cpp  while_loop_clock_test.cpp
cmake_build/src/Morden_Design/: Naive_Singleton.cpp  Smart_Singleton.cpp
cmake_build/src/Multi_thread/: condition_variable.cpp
cmake_build/src/SLAM/: DiscreteBayesFilter.cpp  Dummy_HeatMap.cpp  EPCC.cpp  Get_normalVector.cpp  PCA.cpp
cmake_build/src/SLAM/kalmanFilter/: Extended_kalmanFilter.hpp  KalmanFilter.hpp
cmake_build/src/SLAM/kalmanFilter/example/: EKF_example1.cpp  EKF_example2.cpp  Kalman_example1.cpp
cmake_build/src/abseil/: flat_hash_map.cpp  flat_hash_set.cpp  log.cpp
cmake_build/src/inline.dSYM/Contents/: Info.plist
cmake_build/src/inline.dSYM/Contents/Resources/DWARF/: inline
cmake_build/src/linear_algebra/: Point_to_line_eigen.cpp  eigendecomposition.cpp  orthogonal_least_square.cpp  relative_pose.cpp
cmake_build/src/standard_c++/time/: time_point.cpp
cmake_build/src/virtual_class.dSYM/Contents/: Info.plist
cmake_build/src/virtual_class.dSYM/Contents/Resources/DWARF/: virtual_class
devel/: .catkin  .rosinstall  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/AMCL/: .catkin  local_setup.sh
devel/.private/Algorithm_practice/: .catkin  .rosinstall  local_setup.sh
devel/.private/Backjun/: .catkin  (+3 more)
logs/AMCL/: build.cmake.027.log.stderr
logs/Algorithm_practice/: build.cmake.003.log.stderr
logs/Backjun/: build.cmake.002.log.stderr
logs/C_function/: build.cmake.000.log.stderr  build.make.004.log.stderr  build.make.006.log.stderr  build.make.008.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.019.log.stderr  build.make.021.log.stderr  build.make.022.log.stderr  build.make.041.log.stderr  build.make.042.log.stderr  build.make.048.log.stderr
logs/Opencv/: build.cmake.001.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr
logs/Ros_Python/: build.cmake.000.log.stderr
logs/rospub/: build.make.002.log.stderr
logs/rossub/: build.cmake.001.log.stderr  build.make.034.log.stderr
src/Backjun/: CMakeLists.txt
src/C_function/: CMakeLists.txt
src/Opencv/: .CMakeLists.txt.swp  CMakeLists.txt
src/Ros_Python/: CMakeLists.txt
(+222 files in other folders)
